--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.2.0
   google_fonts: ^6.1.0
+  meta: ^1.10.0
 
 dev_dependencies:
   flutter_test:
