--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.0
   google_fonts: ^6.1.0
   meta: ^1.10.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
