--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.1.0
   meta: ^1.10.0
   geolocator: ^11.0.0
+  geocoding: ^2.2.0
 
 dev_dependencies:
   flutter_test:
