Creating Event Controller methods and doing homepage in frontend

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -7,3 +7,7 @@ addStudentRequest.email.email=Invalid email format
 addStudentRequest.name.notblank=Name is required
 addStudentRequest.password.nomatch=The passwords do not match
 addOrganizerRequest.business.notblank=Business is required
+addEventRequest.name.notblank=Name is required
+addEventRequest.description.notblank=Description is required
+addEventRequest.dateTime.future=The date must be after now
+addEventRequest.eventTypeIds.notempty=The list cannot be empty, you must choose one event type at least
