--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -11,3 +11,4 @@ addEventRequest.name.notblank=Name is required
 addEventRequest.description.notblank=Description is required
 addEventRequest.dateTime.future=The date must be after now
 addEventRequest.eventTypeIds.notempty=The list cannot be empty, you must choose one event type at least
+addEventRequest.cityId.notnull= City id cannot be empty
