--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   meta: ^1.10.0
   geolocator: ^11.0.0
   geocoding: ^2.2.0
+  http_interceptor: ^2.0.0-beta.8
 
 dev_dependencies:
   flutter_test:
