--- a/mobile/student_go/android/app/src/main/AndroidManifest.xml
+++ b/mobile/student_go/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAlKtaZlLjfVcE6fktFj9SB1wqRpFjQtFE"/>
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
