--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   geolocator: ^11.0.0
   geocoding: ^2.2.0
   http_interceptor: ^2.0.0-beta.8
+  skeletonizer: ^1.0.1
+  intl: ^0.19.0
+  infinite_scroll_pagination: ^4.0.0
+  table_calendar: ^3.1.0
+  google_maps_flutter: ^2.5.3
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +76,10 @@ flutter:
   assets:
     - assets/img/logo.png
     - assets/img/full_logo_notrans.jpg
+    - assets/img/fotoprueba1.jpg
+    - assets/img/fotoprueba2.jpg
+    - assets/img/fotoprueba3.jpg
+    - assets/img/card_background.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
