--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_places_flutter: ^2.0.8
   flutter_typeahead: ^5.2.0
   fluttertoast: ^8.2.5
+  flutter_spinkit: ^5.2.1
   
 dev_dependencies:
   flutter_test:
