Design implemented for students coming to an event

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -12,3 +12,13 @@ addEventRequest.description.notblank=Description is required
 addEventRequest.dateTime.future=The date must be after now
 addEventRequest.eventTypeIds.notempty=The list cannot be empty, you must choose one event type at least
 addEventRequest.cityId.notnull= City id cannot be empty
+updateProfileRequest.name.notblank=The name cannot be empty
+updateProfileRequest.description.notblank=The description cannot be empty
+updateProfileRequest.interests.minSize=You have to choose min. an interest type
+updateProfileRequest.interests.notempty=The interest types list cannot be empty
+updateProfileRequest.name.max=The length of the name must be less or equal than 30 characters.
+updateProfileRequest.name.min=The length of the name must be at least 3 characters.
+updateProfileRequest.description.size=The length of the description must be less or equal than 250 characters.
+changeUsernameRequest.username.notblank=Username is required
+changeUsernameRequest.username.min=The length of the username must be at least 4 characters.
+changeUsernameRequest.username.max=The length of the username must be less or equal than 20 characters.
