interest select in register screen added

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -6,6 +6,8 @@ addStudentRequest.email.notblank=Email is required
 addStudentRequest.email.email=Invalid email format
 addStudentRequest.name.notblank=Name is required
 addStudentRequest.password.nomatch=The passwords do not match
+addStudentRequest.interests.minSize=You have to choose min. an interest type
+addStudentRequest.interests.notempty=The interest types list cannot be empty
 addOrganizerRequest.business.notblank=Business is required
 addEventRequest.name.notblank=Name is required
 addEventRequest.description.notblank=Description is required
