All logic and design to load and delete user profile image

--- a/api/StudentGoApi/src/main/resources/application.properties
+++ b/api/StudentGoApi/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 logging.level.org.springframework.security=TRACE
+storage.location=./uploads
