--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   fluttertoast: ^8.2.5
   flutter_spinkit: ^5.2.1
+  image_picker: ^1.0.8
   
 dev_dependencies:
   flutter_test:
@@ -88,6 +89,7 @@ flutter:
     - assets/img/fotoprueba2.jpg
     - assets/img/fotoprueba3.jpg
     - assets/img/card_background.jpg
+    - assets/img/nophoto.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
