--- a/mobile/student_go/pubspec.yaml
+++ b/mobile/student_go/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   fluttertoast: ^8.2.5
   flutter_spinkit: ^5.2.1
   image_picker: ^1.0.8
+  carousel_slider: ^4.2.1
   
 dev_dependencies:
   flutter_test:
