My tickets logic and design added with unique qr code

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -14,6 +14,8 @@ addEventRequest.description.notblank=Description is required
 addEventRequest.dateTime.future=The date must be after now
 addEventRequest.eventTypeIds.notempty=The list cannot be empty, you must choose one event type at least
 addEventRequest.cityId.notnull= City id cannot be empty
+addEventRequest.maxCapacity.notnull=The Event capacity must be specified
+addEventRequest.maxCapacity.min=The capacity should be a positive value
 updateProfileRequest.name.notblank=The name cannot be empty
 updateProfileRequest.description.notblank=The description cannot be empty
 updateProfileRequest.interests.minSize=You have to choose min. an interest type
