--- a/web/angular.json
+++ b/web/angular.json
@@ -53,6 +53,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bulma/css/bulma.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
