--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.10",
+    "@angular/forms": "^17.3.0",
+    "@angular/material": "~16.2.14",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
@@ -25,7 +26,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
     "rxjs": "~7.8.0",
-    "tslib": "^2.6.2",
+    "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
     "@types/babel__core": "^7.20.5",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
