commit for use in mac

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -26,3 +26,23 @@ updateProfileRequest.description.size=The length of the description must be less
 changeUsernameRequest.username.notblank=Username is required
 changeUsernameRequest.username.min=The length of the username must be at least 4 characters.
 changeUsernameRequest.username.max=The length of the username must be less or equal than 20 characters.
+editEventRequest.name.notnull=Name is required
+editEventRequest.name.size=The length of the name must be higher than 3 and less than 50 characters
+editEventRequest.dateTime.notnull=Date is required
+editEventRequest.dateTime.pattern=The datetime must follow the pattern yyyy-MM-dd HH:mm
+editEventRequest.description.notnull=Description is required
+editEventRequest.description.size=The length of the description must be higher than 10 and less than 250 characters
+editEventRequest.price.notnull=Price is required
+editEventRequest.price.min=The price cannot be less than 0
+editEventRequest.price.max=The price cannot be grather than 1000
+editEventRequest.maxCapacity.notnull=Capacity is required
+editEventRequest.maxCapacity.min=The capacity cannot be less than 0
+editEventRequest.city.notnull=City is required
+editEventRequest.latitude.notnull=Latitude is required
+editEventRequest.latitude.min=The minimum of latitude is -90.0
+editEventRequest.latitude.max=The maximum of latitude is 90.0
+editEventRequest.longitude.notnull=Longitude is required
+editEventRequest.longitude.min=The minimum of longitude is -180.0
+editEventRequest.longitude.max=The maximum of longitude is 180.0
+editEventRequest.eventTypes.notnull=Event types are required
+editEventRequest.eventTypes.notempty=Event types array cannot be empty
