purchases crud done

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -46,3 +46,9 @@ editEventRequest.longitude.min=The minimum of longitude is -180.0
 editEventRequest.longitude.max=The maximum of longitude is 180.0
 editEventRequest.eventTypes.notnull=Event types are required
 editEventRequest.eventTypes.notempty=Event types array cannot be empty
+purchaseRequest.eventId.notnull=The event id is required
+purchaseRequest.eventId.pattern=The format must be UUID on eventId
+purchaseRequest.studentId.notnull=The student id is required
+purchaseRequest.studentId.pattern=The format must be UUID on studentId
+purchaseRequest.price.notnull=The price is required
+purchaseRequest.price.min=The price must be greater than 0
