Student crud ready

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -52,3 +52,5 @@ purchaseRequest.studentId.notnull=The student id is required
 purchaseRequest.studentId.pattern=The format must be UUID on studentId
 purchaseRequest.price.notnull=The price is required
 purchaseRequest.price.min=The price must be greater than 0
+updateStudentRequest.email.emailFormat=The email must have the correct format
+updateStudentRequest.email.notblank=email is required
