crud organizer ready

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -54,3 +54,5 @@ purchaseRequest.price.notnull=The price is required
 purchaseRequest.price.min=The price must be greater than 0
 updateStudentRequest.email.emailFormat=The email must have the correct format
 updateStudentRequest.email.notblank=email is required
+organizerRequest.email.emailFormat=The email must have the correct format
+organizerRequest.email.notblank=email is required
