Crud event types ready

--- a/api/StudentGoApi/src/main/resources/error.properties
+++ b/api/StudentGoApi/src/main/resources/error.properties
@@ -56,3 +56,8 @@ updateStudentRequest.email.emailFormat=The email must have the correct format
 updateStudentRequest.email.notblank=email is required
 organizerRequest.email.emailFormat=The email must have the correct format
 organizerRequest.email.notblank=email is required
+eventTypeRequest.name.notblank=name is required
+eventTypeRequest.iconRef.notblank=Icon reference cannot be blank
+eventTypeRequest.iconRef.pattern=Invalid icon reference
+eventTypeRequest.colorCode.notblank=Color code cannot be blank
+eventTypeRequest.colorCode.pattern=Invalid color code
