--- a/mobile/student_go/ios/Runner/Info.plist
+++ b/mobile/student_go/ios/Runner/Info.plist
@@ -28,6 +28,14 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Explanation of why the app needs access to the camera.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Explanation of why the app needs access to the photo library.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>For a better use of the app.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>For a better use of the app.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
