--- a/mobile/student_go/ios/Runner/Info.plist
+++ b/mobile/student_go/ios/Runner/Info.plist
@@ -33,9 +33,12 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Explanation of why the app needs access to the photo library.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>For a better use of the app.</string>
+	<string>We need your location to show nearby events.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>For a better use of the app.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to show nearby events even when the app is in the background.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
